--- a/berts/spanbert_colt5.ipynb
+++ b/berts/spanbert_colt5.ipynb
@@ -4,7 +4,25 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/miu/miniconda3/envs/torch/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/home/miu/miniconda3/envs/torch/lib/python3.10/site-packages/bitsandbytes/cextension.py:34: UserWarning: The installed version of bitsandbytes was compiled without GPU support. 8-bit optimizers, 8-bit multiplication, and GPU quantization are unavailable.\n",
+      "  warn(\"The installed version of bitsandbytes was compiled without GPU support. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/miu/miniconda3/envs/torch/lib/python3.10/site-packages/bitsandbytes/libbitsandbytes_cpu.so: undefined symbol: cadam32bit_grad_fp32\n"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
@@ -43,8 +61,30 @@
     "\n",
     "import torch.nn.functional as F\n",
     "# from einops import rearrange, pack, unpack\n",
-    "import sys\n",
-    "sys.path.append('/home/kiki/dados_servidor/Servidor/LM_Pretraining/EfficientPretrain/')"
+    "import sys\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/miu/Projects/NLPLab/berts\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "#get cur dir\n",
+    "cur_dir = os.getcwd()\n",
+    "if 'miu' in cur_dir:\n",
+    "    sys.path.append('/home/miu/Projects/NLPLab/')\n",
+    "elif 'kiki' in cur_dir:\n",
+    "    sys.path.append('/home/kiki/dados_servidor/Servidor/NLPLab/')\n"
    ]
   },
   {
@@ -3067,7 +3107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4
  },
