--- a/DensePhrasesMinimal/main_dp.ipynb
+++ b/DensePhrasesMinimal/main_dp.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,14 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "12/28/2023 21:24:22 - INFO - __main__ - Distributed environment: NO\n",
+      "12/29/2023 01:18:17 - INFO - __main__ - Distributed environment: NO\n",
       "Num processes: 1\n",
       "Process index: 0\n",
       "Local process index: 0\n",
@@ -188,19 +188,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "loading configuration file https://huggingface.co/SpanBERT/spanbert-base-cased/resolve/main/config.json from cache at /home/miu/.cache/huggingface/transformers/db038c967205352871fe5924ad8dd767343ca3c4869744e2e81eae6c199e8721.5b1ff81c06025be8bc48ae0cf34bb012d6cbc7f8918e8bcd354f80e6952b3ae7\n",
+      "https://huggingface.co/bert-base-uncased/resolve/main/config.json not found in cache or force_download set to True, downloading to /home/miu/.cache/huggingface/transformers/tmpwxymjqkc\n",
+      "Downloading: 100%|██████████| 570/570 [00:00<00:00, 181kB/s]\n",
+      "storing https://huggingface.co/bert-base-uncased/resolve/main/config.json in cache at /home/miu/.cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
+      "creating metadata file for /home/miu/.cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
+      "loading configuration file https://huggingface.co/bert-base-uncased/resolve/main/config.json from cache at /home/miu/.cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
       "Model config BertConfig {\n",
-      "  \"_name_or_path\": \"SpanBERT/spanbert-base-cased\",\n",
+      "  \"_name_or_path\": \"bert-base-uncased\",\n",
+      "  \"architectures\": [\n",
+      "    \"BertForMaskedLM\"\n",
+      "  ],\n",
       "  \"attention_probs_dropout_prob\": 0.1,\n",
       "  \"classifier_dropout\": null,\n",
-      "  \"directionality\": \"bidi\",\n",
+      "  \"gradient_checkpointing\": false,\n",
       "  \"hidden_act\": \"gelu\",\n",
       "  \"hidden_dropout_prob\": 0.1,\n",
       "  \"hidden_size\": 768,\n",
@@ -216,16 +223,22 @@
       "  \"transformers_version\": \"4.13.0\",\n",
       "  \"type_vocab_size\": 2,\n",
       "  \"use_cache\": true,\n",
-      "  \"vocab_size\": 28996\n",
+      "  \"vocab_size\": 30522\n",
       "}\n",
       "\n",
-      "Could not locate the tokenizer configuration file, will try to use the model config instead.\n",
-      "loading configuration file https://huggingface.co/SpanBERT/spanbert-base-cased/resolve/main/config.json from cache at /home/miu/.cache/huggingface/transformers/db038c967205352871fe5924ad8dd767343ca3c4869744e2e81eae6c199e8721.5b1ff81c06025be8bc48ae0cf34bb012d6cbc7f8918e8bcd354f80e6952b3ae7\n",
+      "https://huggingface.co/bert-base-uncased/resolve/main/tokenizer_config.json not found in cache or force_download set to True, downloading to /home/miu/.cache/huggingface/transformers/tmp10gt3m4m\n",
+      "Downloading: 100%|██████████| 28.0/28.0 [00:00<00:00, 6.93kB/s]\n",
+      "storing https://huggingface.co/bert-base-uncased/resolve/main/tokenizer_config.json in cache at /home/miu/.cache/huggingface/transformers/c1d7f0a763fb63861cc08553866f1fc3e5a6f4f07621be277452d26d71303b7e.20430bd8e10ef77a7d2977accefe796051e01bc2fc4aa146bc862997a1a15e79\n",
+      "creating metadata file for /home/miu/.cache/huggingface/transformers/c1d7f0a763fb63861cc08553866f1fc3e5a6f4f07621be277452d26d71303b7e.20430bd8e10ef77a7d2977accefe796051e01bc2fc4aa146bc862997a1a15e79\n",
+      "loading configuration file https://huggingface.co/bert-base-uncased/resolve/main/config.json from cache at /home/miu/.cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
       "Model config BertConfig {\n",
-      "  \"_name_or_path\": \"SpanBERT/spanbert-base-cased\",\n",
+      "  \"_name_or_path\": \"bert-base-uncased\",\n",
+      "  \"architectures\": [\n",
+      "    \"BertForMaskedLM\"\n",
+      "  ],\n",
       "  \"attention_probs_dropout_prob\": 0.1,\n",
       "  \"classifier_dropout\": null,\n",
-      "  \"directionality\": \"bidi\",\n",
+      "  \"gradient_checkpointing\": false,\n",
       "  \"hidden_act\": \"gelu\",\n",
       "  \"hidden_dropout_prob\": 0.1,\n",
       "  \"hidden_size\": 768,\n",
@@ -241,20 +254,31 @@
       "  \"transformers_version\": \"4.13.0\",\n",
       "  \"type_vocab_size\": 2,\n",
       "  \"use_cache\": true,\n",
-      "  \"vocab_size\": 28996\n",
+      "  \"vocab_size\": 30522\n",
       "}\n",
       "\n",
-      "loading file https://huggingface.co/SpanBERT/spanbert-base-cased/resolve/main/vocab.txt from cache at /home/miu/.cache/huggingface/transformers/fe71705539a68d12ea01aee41383b9446270b7d15e508a9b82bb32bceb51def3.437aa611e89f6fc6675a049d2b5545390adbc617e7d655286421c191d2be2791\n",
-      "loading file https://huggingface.co/SpanBERT/spanbert-base-cased/resolve/main/tokenizer.json from cache at None\n",
-      "loading file https://huggingface.co/SpanBERT/spanbert-base-cased/resolve/main/added_tokens.json from cache at None\n",
-      "loading file https://huggingface.co/SpanBERT/spanbert-base-cased/resolve/main/special_tokens_map.json from cache at None\n",
-      "loading file https://huggingface.co/SpanBERT/spanbert-base-cased/resolve/main/tokenizer_config.json from cache at None\n",
-      "loading configuration file https://huggingface.co/SpanBERT/spanbert-base-cased/resolve/main/config.json from cache at /home/miu/.cache/huggingface/transformers/db038c967205352871fe5924ad8dd767343ca3c4869744e2e81eae6c199e8721.5b1ff81c06025be8bc48ae0cf34bb012d6cbc7f8918e8bcd354f80e6952b3ae7\n",
+      "https://huggingface.co/bert-base-uncased/resolve/main/vocab.txt not found in cache or force_download set to True, downloading to /home/miu/.cache/huggingface/transformers/tmpds53ll2w\n",
+      "Downloading: 100%|██████████| 226k/226k [00:00<00:00, 694kB/s] \n",
+      "storing https://huggingface.co/bert-base-uncased/resolve/main/vocab.txt in cache at /home/miu/.cache/huggingface/transformers/45c3f7a79a80e1cf0a489e5c62b43f173c15db47864303a55d623bb3c96f72a5.d789d64ebfe299b0e416afc4a169632f903f693095b4629a7ea271d5a0cf2c99\n",
+      "creating metadata file for /home/miu/.cache/huggingface/transformers/45c3f7a79a80e1cf0a489e5c62b43f173c15db47864303a55d623bb3c96f72a5.d789d64ebfe299b0e416afc4a169632f903f693095b4629a7ea271d5a0cf2c99\n",
+      "https://huggingface.co/bert-base-uncased/resolve/main/tokenizer.json not found in cache or force_download set to True, downloading to /home/miu/.cache/huggingface/transformers/tmpz66ebe0v\n",
+      "Downloading: 100%|██████████| 455k/455k [00:00<00:00, 977kB/s] \n",
+      "storing https://huggingface.co/bert-base-uncased/resolve/main/tokenizer.json in cache at /home/miu/.cache/huggingface/transformers/534479488c54aeaf9c3406f647aa2ec13648c06771ffe269edabebd4c412da1d.7f2721073f19841be16f41b0a70b600ca6b880c8f3df6f3535cbc704371bdfa4\n",
+      "creating metadata file for /home/miu/.cache/huggingface/transformers/534479488c54aeaf9c3406f647aa2ec13648c06771ffe269edabebd4c412da1d.7f2721073f19841be16f41b0a70b600ca6b880c8f3df6f3535cbc704371bdfa4\n",
+      "loading file https://huggingface.co/bert-base-uncased/resolve/main/vocab.txt from cache at /home/miu/.cache/huggingface/transformers/45c3f7a79a80e1cf0a489e5c62b43f173c15db47864303a55d623bb3c96f72a5.d789d64ebfe299b0e416afc4a169632f903f693095b4629a7ea271d5a0cf2c99\n",
+      "loading file https://huggingface.co/bert-base-uncased/resolve/main/tokenizer.json from cache at /home/miu/.cache/huggingface/transformers/534479488c54aeaf9c3406f647aa2ec13648c06771ffe269edabebd4c412da1d.7f2721073f19841be16f41b0a70b600ca6b880c8f3df6f3535cbc704371bdfa4\n",
+      "loading file https://huggingface.co/bert-base-uncased/resolve/main/added_tokens.json from cache at None\n",
+      "loading file https://huggingface.co/bert-base-uncased/resolve/main/special_tokens_map.json from cache at None\n",
+      "loading file https://huggingface.co/bert-base-uncased/resolve/main/tokenizer_config.json from cache at /home/miu/.cache/huggingface/transformers/c1d7f0a763fb63861cc08553866f1fc3e5a6f4f07621be277452d26d71303b7e.20430bd8e10ef77a7d2977accefe796051e01bc2fc4aa146bc862997a1a15e79\n",
+      "loading configuration file https://huggingface.co/bert-base-uncased/resolve/main/config.json from cache at /home/miu/.cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
       "Model config BertConfig {\n",
-      "  \"_name_or_path\": \"SpanBERT/spanbert-base-cased\",\n",
+      "  \"_name_or_path\": \"bert-base-uncased\",\n",
+      "  \"architectures\": [\n",
+      "    \"BertForMaskedLM\"\n",
+      "  ],\n",
       "  \"attention_probs_dropout_prob\": 0.1,\n",
       "  \"classifier_dropout\": null,\n",
-      "  \"directionality\": \"bidi\",\n",
+      "  \"gradient_checkpointing\": false,\n",
       "  \"hidden_act\": \"gelu\",\n",
       "  \"hidden_dropout_prob\": 0.1,\n",
       "  \"hidden_size\": 768,\n",
@@ -270,31 +294,7 @@
       "  \"transformers_version\": \"4.13.0\",\n",
       "  \"type_vocab_size\": 2,\n",
       "  \"use_cache\": true,\n",
-      "  \"vocab_size\": 28996\n",
-      "}\n",
-      "\n",
-      "loading configuration file https://huggingface.co/SpanBERT/spanbert-base-cased/resolve/main/config.json from cache at /home/miu/.cache/huggingface/transformers/db038c967205352871fe5924ad8dd767343ca3c4869744e2e81eae6c199e8721.5b1ff81c06025be8bc48ae0cf34bb012d6cbc7f8918e8bcd354f80e6952b3ae7\n",
-      "Model config BertConfig {\n",
-      "  \"_name_or_path\": \"SpanBERT/spanbert-base-cased\",\n",
-      "  \"attention_probs_dropout_prob\": 0.1,\n",
-      "  \"classifier_dropout\": null,\n",
-      "  \"directionality\": \"bidi\",\n",
-      "  \"hidden_act\": \"gelu\",\n",
-      "  \"hidden_dropout_prob\": 0.1,\n",
-      "  \"hidden_size\": 768,\n",
-      "  \"initializer_range\": 0.02,\n",
-      "  \"intermediate_size\": 3072,\n",
-      "  \"layer_norm_eps\": 1e-12,\n",
-      "  \"max_position_embeddings\": 512,\n",
-      "  \"model_type\": \"bert\",\n",
-      "  \"num_attention_heads\": 12,\n",
-      "  \"num_hidden_layers\": 12,\n",
-      "  \"pad_token_id\": 0,\n",
-      "  \"position_embedding_type\": \"absolute\",\n",
-      "  \"transformers_version\": \"4.13.0\",\n",
-      "  \"type_vocab_size\": 2,\n",
-      "  \"use_cache\": true,\n",
-      "  \"vocab_size\": 28996\n",
+      "  \"vocab_size\": 30522\n",
       "}\n",
       "\n"
      ]
@@ -303,7 +303,10 @@
    "source": [
     "# args.model_name_or_path='xlnet-base-cased'\n",
     "#args.model_name_or_path='google/electra-small-discriminator'\n",
-    "args.model_name_or_path='SpanBERT/spanbert-base-cased'\n",
+    "# args.model_name_or_path='SpanBERT/spanbert-base-cased'\n",
+    "#distilbert\n",
+    "# args.model_name_or_path='distilbert-base-uncased'\n",
+    "args.model_name_or_path='bert-base-uncased'\n",
     "\n",
     "if args.config_name:\n",
     "    config = AutoConfig.from_pretrained(args.config_name)\n",
@@ -326,20 +329,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "loading weights file https://huggingface.co/SpanBERT/spanbert-base-cased/resolve/main/pytorch_model.bin from cache at /home/miu/.cache/huggingface/transformers/68e848fa2356080c3562c654d38b1f08aeae4efa1d3eb4158df83e7a76ae247c.82c10a05d3173b2d169c79a230add282f36a2b132e1b960940f7f1e60c9f2e28\n",
-      "All model checkpoint weights were used when initializing BertModel.\n",
-      "\n",
-      "Some weights of BertModel were not initialized from the model checkpoint at SpanBERT/spanbert-base-cased and are newly initialized: ['bert.pooler.dense.weight', 'bert.pooler.dense.bias']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "12/28/2023 22:28:59 - INFO - __main__ - DensePhrases encoder initialized with SpanBERT/spanbert-base-cased (<class 'transformers.models.bert.modeling_bert.BertModel'>)\n",
-      "12/28/2023 22:28:59 - INFO - encoder - Initializing encoders with pre-trained LM\n"
+      "https://huggingface.co/bert-base-uncased/resolve/main/pytorch_model.bin not found in cache or force_download set to True, downloading to /home/miu/.cache/huggingface/transformers/tmpfityay0t\n",
+      "Downloading: 100%|██████████| 420M/420M [00:14<00:00, 31.2MB/s] \n",
+      "storing https://huggingface.co/bert-base-uncased/resolve/main/pytorch_model.bin in cache at /home/miu/.cache/huggingface/transformers/a8041bf617d7f94ea26d15e218abd04afc2004805632abc0ed2066aa16d50d04.faf6ea826ae9c5867d12b22257f9877e6b8367890837bd60f7c54a29633f7f2f\n",
+      "creating metadata file for /home/miu/.cache/huggingface/transformers/a8041bf617d7f94ea26d15e218abd04afc2004805632abc0ed2066aa16d50d04.faf6ea826ae9c5867d12b22257f9877e6b8367890837bd60f7c54a29633f7f2f\n",
+      "loading weights file https://huggingface.co/bert-base-uncased/resolve/main/pytorch_model.bin from cache at /home/miu/.cache/huggingface/transformers/a8041bf617d7f94ea26d15e218abd04afc2004805632abc0ed2066aa16d50d04.faf6ea826ae9c5867d12b22257f9877e6b8367890837bd60f7c54a29633f7f2f\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight', 'cls.predictions.bias', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.weight']\n",
+      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "All the weights of BertModel were initialized from the model checkpoint at bert-base-uncased.\n",
+      "If your task is similar to the task the model of the checkpoint was trained on, you can already use BertModel for predictions without further training.\n",
+      "12/29/2023 01:25:22 - INFO - __main__ - DensePhrases encoder initialized with bert-base-uncased (<class 'transformers.models.bert.modeling_bert.BertModel'>)\n",
+      "12/29/2023 01:25:22 - INFO - encoder - Initializing encoders with pre-trained LM\n"
      ]
     }
    ],
@@ -397,15 +405,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "12/28/2023 22:29:09 - WARNING - datasets.builder - Found cached dataset squad (/home/miu/.cache/huggingface/datasets/squad/plain_text/1.0.0/d6ec3ceb99ca480ce37cdd35555d6cb2511d223b9150cce08a837ef62ffea453)\n",
-      "100%|██████████| 2/2 [00:00<00:00, 254.52it/s]\n"
+      "12/29/2023 01:25:25 - WARNING - datasets.builder - Found cached dataset squad (/home/miu/.cache/huggingface/datasets/squad/plain_text/1.0.0/d6ec3ceb99ca480ce37cdd35555d6cb2511d223b9150cce08a837ef62ffea453)\n",
+      "100%|██████████| 2/2 [00:00<00:00, 835.10it/s]\n"
      ]
     },
     {
@@ -429,7 +437,7 @@
        "  'max_seq_length': 384})"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,21 +452,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "12/28/2023 22:32:28 - WARNING - datasets.arrow_dataset - Loading cached processed dataset at /home/miu/.cache/huggingface/datasets/squad/plain_text/1.0.0/d6ec3ceb99ca480ce37cdd35555d6cb2511d223b9150cce08a837ef62ffea453/cache-ea59efc8022a46f3.arrow\n"
+      "Running tokenizer on train dataset:   0%|          | 0/88 [00:00<?, ?ba/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "12/28/2023 22:32:28 - WARNING - datasets.arrow_dataset - Loading cached processed dataset at /home/miu/.cache/huggingface/datasets/squad/plain_text/1.0.0/d6ec3ceb99ca480ce37cdd35555d6cb2511d223b9150cce08a837ef62ffea453/cache-e201c0423a20ef49.arrow\n"
+      "Running tokenizer on train dataset:  99%|█████████▉| 87/88 [00:13<00:00,  6.65ba/s]\n",
+      "Running tokenizer on validation dataset:  91%|█████████ | 10/11 [00:02<00:00,  3.96ba/s]\n"
      ]
     }
    ],
