add densephrases inferece

--- a/DensePhrasesMinimal/main_dp.ipynb
+++ b/DensePhrasesMinimal/main_dp.ipynb
@@ -119,7 +119,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "12/29/2023 01:18:17 - INFO - __main__ - Distributed environment: NO\n",
+      "12/29/2023 11:55:43 - INFO - __main__ - Distributed environment: NO\n",
       "Num processes: 1\n",
       "Process index: 0\n",
       "Local process index: 0\n",
@@ -188,18 +188,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "https://huggingface.co/bert-base-uncased/resolve/main/config.json not found in cache or force_download set to True, downloading to /home/miu/.cache/huggingface/transformers/tmpwxymjqkc\n",
-      "Downloading: 100%|██████████| 570/570 [00:00<00:00, 181kB/s]\n",
-      "storing https://huggingface.co/bert-base-uncased/resolve/main/config.json in cache at /home/miu/.cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
-      "creating metadata file for /home/miu/.cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
-      "loading configuration file https://huggingface.co/bert-base-uncased/resolve/main/config.json from cache at /home/miu/.cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
+      "https://huggingface.co/bert-base-uncased/resolve/main/config.json not found in cache or force_download set to True, downloading to /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/tmp3dovd_hy\n",
+      "Downloading: 100%|██████████| 570/570 [00:00<00:00, 189kB/s]\n",
+      "storing https://huggingface.co/bert-base-uncased/resolve/main/config.json in cache at /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
+      "creating metadata file for /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
+      "loading configuration file https://huggingface.co/bert-base-uncased/resolve/main/config.json from cache at /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
       "Model config BertConfig {\n",
       "  \"_name_or_path\": \"bert-base-uncased\",\n",
       "  \"architectures\": [\n",
@@ -226,11 +226,11 @@
       "  \"vocab_size\": 30522\n",
       "}\n",
       "\n",
-      "https://huggingface.co/bert-base-uncased/resolve/main/tokenizer_config.json not found in cache or force_download set to True, downloading to /home/miu/.cache/huggingface/transformers/tmp10gt3m4m\n",
-      "Downloading: 100%|██████████| 28.0/28.0 [00:00<00:00, 6.93kB/s]\n",
-      "storing https://huggingface.co/bert-base-uncased/resolve/main/tokenizer_config.json in cache at /home/miu/.cache/huggingface/transformers/c1d7f0a763fb63861cc08553866f1fc3e5a6f4f07621be277452d26d71303b7e.20430bd8e10ef77a7d2977accefe796051e01bc2fc4aa146bc862997a1a15e79\n",
-      "creating metadata file for /home/miu/.cache/huggingface/transformers/c1d7f0a763fb63861cc08553866f1fc3e5a6f4f07621be277452d26d71303b7e.20430bd8e10ef77a7d2977accefe796051e01bc2fc4aa146bc862997a1a15e79\n",
-      "loading configuration file https://huggingface.co/bert-base-uncased/resolve/main/config.json from cache at /home/miu/.cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
+      "https://huggingface.co/bert-base-uncased/resolve/main/tokenizer_config.json not found in cache or force_download set to True, downloading to /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/tmpowcxww6d\n",
+      "Downloading: 100%|██████████| 28.0/28.0 [00:00<00:00, 39.4kB/s]\n",
+      "storing https://huggingface.co/bert-base-uncased/resolve/main/tokenizer_config.json in cache at /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/c1d7f0a763fb63861cc08553866f1fc3e5a6f4f07621be277452d26d71303b7e.20430bd8e10ef77a7d2977accefe796051e01bc2fc4aa146bc862997a1a15e79\n",
+      "creating metadata file for /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/c1d7f0a763fb63861cc08553866f1fc3e5a6f4f07621be277452d26d71303b7e.20430bd8e10ef77a7d2977accefe796051e01bc2fc4aa146bc862997a1a15e79\n",
+      "loading configuration file https://huggingface.co/bert-base-uncased/resolve/main/config.json from cache at /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
       "Model config BertConfig {\n",
       "  \"_name_or_path\": \"bert-base-uncased\",\n",
       "  \"architectures\": [\n",
@@ -257,20 +257,20 @@
       "  \"vocab_size\": 30522\n",
       "}\n",
       "\n",
-      "https://huggingface.co/bert-base-uncased/resolve/main/vocab.txt not found in cache or force_download set to True, downloading to /home/miu/.cache/huggingface/transformers/tmpds53ll2w\n",
-      "Downloading: 100%|██████████| 226k/226k [00:00<00:00, 694kB/s] \n",
-      "storing https://huggingface.co/bert-base-uncased/resolve/main/vocab.txt in cache at /home/miu/.cache/huggingface/transformers/45c3f7a79a80e1cf0a489e5c62b43f173c15db47864303a55d623bb3c96f72a5.d789d64ebfe299b0e416afc4a169632f903f693095b4629a7ea271d5a0cf2c99\n",
-      "creating metadata file for /home/miu/.cache/huggingface/transformers/45c3f7a79a80e1cf0a489e5c62b43f173c15db47864303a55d623bb3c96f72a5.d789d64ebfe299b0e416afc4a169632f903f693095b4629a7ea271d5a0cf2c99\n",
-      "https://huggingface.co/bert-base-uncased/resolve/main/tokenizer.json not found in cache or force_download set to True, downloading to /home/miu/.cache/huggingface/transformers/tmpz66ebe0v\n",
-      "Downloading: 100%|██████████| 455k/455k [00:00<00:00, 977kB/s] \n",
-      "storing https://huggingface.co/bert-base-uncased/resolve/main/tokenizer.json in cache at /home/miu/.cache/huggingface/transformers/534479488c54aeaf9c3406f647aa2ec13648c06771ffe269edabebd4c412da1d.7f2721073f19841be16f41b0a70b600ca6b880c8f3df6f3535cbc704371bdfa4\n",
-      "creating metadata file for /home/miu/.cache/huggingface/transformers/534479488c54aeaf9c3406f647aa2ec13648c06771ffe269edabebd4c412da1d.7f2721073f19841be16f41b0a70b600ca6b880c8f3df6f3535cbc704371bdfa4\n",
-      "loading file https://huggingface.co/bert-base-uncased/resolve/main/vocab.txt from cache at /home/miu/.cache/huggingface/transformers/45c3f7a79a80e1cf0a489e5c62b43f173c15db47864303a55d623bb3c96f72a5.d789d64ebfe299b0e416afc4a169632f903f693095b4629a7ea271d5a0cf2c99\n",
-      "loading file https://huggingface.co/bert-base-uncased/resolve/main/tokenizer.json from cache at /home/miu/.cache/huggingface/transformers/534479488c54aeaf9c3406f647aa2ec13648c06771ffe269edabebd4c412da1d.7f2721073f19841be16f41b0a70b600ca6b880c8f3df6f3535cbc704371bdfa4\n",
+      "https://huggingface.co/bert-base-uncased/resolve/main/vocab.txt not found in cache or force_download set to True, downloading to /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/tmp45bt9b_7\n",
+      "Downloading: 100%|██████████| 226k/226k [00:00<00:00, 703kB/s] \n",
+      "storing https://huggingface.co/bert-base-uncased/resolve/main/vocab.txt in cache at /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/45c3f7a79a80e1cf0a489e5c62b43f173c15db47864303a55d623bb3c96f72a5.d789d64ebfe299b0e416afc4a169632f903f693095b4629a7ea271d5a0cf2c99\n",
+      "creating metadata file for /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/45c3f7a79a80e1cf0a489e5c62b43f173c15db47864303a55d623bb3c96f72a5.d789d64ebfe299b0e416afc4a169632f903f693095b4629a7ea271d5a0cf2c99\n",
+      "https://huggingface.co/bert-base-uncased/resolve/main/tokenizer.json not found in cache or force_download set to True, downloading to /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/tmpv3qsrvr1\n",
+      "Downloading: 100%|██████████| 455k/455k [00:00<00:00, 997kB/s] \n",
+      "storing https://huggingface.co/bert-base-uncased/resolve/main/tokenizer.json in cache at /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/534479488c54aeaf9c3406f647aa2ec13648c06771ffe269edabebd4c412da1d.7f2721073f19841be16f41b0a70b600ca6b880c8f3df6f3535cbc704371bdfa4\n",
+      "creating metadata file for /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/534479488c54aeaf9c3406f647aa2ec13648c06771ffe269edabebd4c412da1d.7f2721073f19841be16f41b0a70b600ca6b880c8f3df6f3535cbc704371bdfa4\n",
+      "loading file https://huggingface.co/bert-base-uncased/resolve/main/vocab.txt from cache at /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/45c3f7a79a80e1cf0a489e5c62b43f173c15db47864303a55d623bb3c96f72a5.d789d64ebfe299b0e416afc4a169632f903f693095b4629a7ea271d5a0cf2c99\n",
+      "loading file https://huggingface.co/bert-base-uncased/resolve/main/tokenizer.json from cache at /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/534479488c54aeaf9c3406f647aa2ec13648c06771ffe269edabebd4c412da1d.7f2721073f19841be16f41b0a70b600ca6b880c8f3df6f3535cbc704371bdfa4\n",
       "loading file https://huggingface.co/bert-base-uncased/resolve/main/added_tokens.json from cache at None\n",
       "loading file https://huggingface.co/bert-base-uncased/resolve/main/special_tokens_map.json from cache at None\n",
-      "loading file https://huggingface.co/bert-base-uncased/resolve/main/tokenizer_config.json from cache at /home/miu/.cache/huggingface/transformers/c1d7f0a763fb63861cc08553866f1fc3e5a6f4f07621be277452d26d71303b7e.20430bd8e10ef77a7d2977accefe796051e01bc2fc4aa146bc862997a1a15e79\n",
-      "loading configuration file https://huggingface.co/bert-base-uncased/resolve/main/config.json from cache at /home/miu/.cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
+      "loading file https://huggingface.co/bert-base-uncased/resolve/main/tokenizer_config.json from cache at /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/c1d7f0a763fb63861cc08553866f1fc3e5a6f4f07621be277452d26d71303b7e.20430bd8e10ef77a7d2977accefe796051e01bc2fc4aa146bc862997a1a15e79\n",
+      "loading configuration file https://huggingface.co/bert-base-uncased/resolve/main/config.json from cache at /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
       "Model config BertConfig {\n",
       "  \"_name_or_path\": \"bert-base-uncased\",\n",
       "  \"architectures\": [\n",
@@ -329,25 +329,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "https://huggingface.co/bert-base-uncased/resolve/main/pytorch_model.bin not found in cache or force_download set to True, downloading to /home/miu/.cache/huggingface/transformers/tmpfityay0t\n",
-      "Downloading: 100%|██████████| 420M/420M [00:14<00:00, 31.2MB/s] \n",
-      "storing https://huggingface.co/bert-base-uncased/resolve/main/pytorch_model.bin in cache at /home/miu/.cache/huggingface/transformers/a8041bf617d7f94ea26d15e218abd04afc2004805632abc0ed2066aa16d50d04.faf6ea826ae9c5867d12b22257f9877e6b8367890837bd60f7c54a29633f7f2f\n",
-      "creating metadata file for /home/miu/.cache/huggingface/transformers/a8041bf617d7f94ea26d15e218abd04afc2004805632abc0ed2066aa16d50d04.faf6ea826ae9c5867d12b22257f9877e6b8367890837bd60f7c54a29633f7f2f\n",
-      "loading weights file https://huggingface.co/bert-base-uncased/resolve/main/pytorch_model.bin from cache at /home/miu/.cache/huggingface/transformers/a8041bf617d7f94ea26d15e218abd04afc2004805632abc0ed2066aa16d50d04.faf6ea826ae9c5867d12b22257f9877e6b8367890837bd60f7c54a29633f7f2f\n",
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight', 'cls.predictions.bias', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.weight']\n",
+      "https://huggingface.co/bert-base-uncased/resolve/main/pytorch_model.bin not found in cache or force_download set to True, downloading to /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/tmp7tum2o5u\n",
+      "Downloading: 100%|██████████| 420M/420M [00:14<00:00, 31.0MB/s] \n",
+      "storing https://huggingface.co/bert-base-uncased/resolve/main/pytorch_model.bin in cache at /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/a8041bf617d7f94ea26d15e218abd04afc2004805632abc0ed2066aa16d50d04.faf6ea826ae9c5867d12b22257f9877e6b8367890837bd60f7c54a29633f7f2f\n",
+      "creating metadata file for /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/a8041bf617d7f94ea26d15e218abd04afc2004805632abc0ed2066aa16d50d04.faf6ea826ae9c5867d12b22257f9877e6b8367890837bd60f7c54a29633f7f2f\n",
+      "loading weights file https://huggingface.co/bert-base-uncased/resolve/main/pytorch_model.bin from cache at /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/a8041bf617d7f94ea26d15e218abd04afc2004805632abc0ed2066aa16d50d04.faf6ea826ae9c5867d12b22257f9877e6b8367890837bd60f7c54a29633f7f2f\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias', 'cls.seq_relationship.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight']\n",
       "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "All the weights of BertModel were initialized from the model checkpoint at bert-base-uncased.\n",
       "If your task is similar to the task the model of the checkpoint was trained on, you can already use BertModel for predictions without further training.\n",
-      "12/29/2023 01:25:22 - INFO - __main__ - DensePhrases encoder initialized with bert-base-uncased (<class 'transformers.models.bert.modeling_bert.BertModel'>)\n",
-      "12/29/2023 01:25:22 - INFO - encoder - Initializing encoders with pre-trained LM\n"
+      "12/29/2023 11:56:07 - INFO - __main__ - DensePhrases encoder initialized with bert-base-uncased (<class 'transformers.models.bert.modeling_bert.BertModel'>)\n",
+      "12/29/2023 11:56:07 - INFO - encoder - Initializing encoders with pre-trained LM\n"
      ]
     }
    ],
@@ -1279,8 +1279,8 @@
    ],
    "source": [
     "\n",
-    "args.pretrained_name_or_path='/home/miu/Projects/NLP/PRO-ConvQA/results'\n",
-    "args.load_dir='/home/miu/Projects/NLP/PRO-ConvQA/results'\n",
+    "args.pretrained_name_or_path='results'\n",
+    "args.load_dir='results'\n",
     "args.cache_dir=None\n",
     "args.tokenizer_name='SpanBERT/spanbert-base-cased'\n",
     "args.config_name='SpanBERT/spanbert-base-cased'\n",
@@ -1292,7 +1292,7 @@
     "args.config_name='SpanBERT/spanbert-base-cased'\n",
     "\"\"\"\n",
     "\n",
-    "args.max_query_length=10\n",
+    "args.max_query_length=50\n",
     "\n",
     "model, tokenizer, _ = load_encoder(accelerator.device, args, phrase_only=False)"
    ]
@@ -1402,7 +1402,7 @@
     "args.eval_batch_size=8\n",
     "args.dataloader_drop_last=True\n",
     "args.dataloader_pin_memory=True\n",
-    "args.output_dir='/home/miu/Projects/NLP/PRO-ConvQA/output_test/'\n",
+    "args.output_dir='output_test/'\n",
     "args.test_file='/home/miu/Projects/NLP/PRO-ConvQA/wikidump/wiki-dev/0000'\n",
     "args.prediction_loss_only=False\n",
     "args.n_gpu=1\n",
