--- a/DensePhrasesMinimal/main_dp.ipynb
+++ b/DensePhrasesMinimal/main_dp.ipynb
@@ -119,7 +119,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "12/29/2023 11:55:43 - INFO - __main__ - Distributed environment: NO\n",
+      "12/29/2023 19:34:49 - INFO - __main__ - Distributed environment: NO\n",
       "Num processes: 1\n",
       "Process index: 0\n",
       "Local process index: 0\n",
@@ -195,11 +195,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "https://huggingface.co/bert-base-uncased/resolve/main/config.json not found in cache or force_download set to True, downloading to /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/tmp3dovd_hy\n",
-      "Downloading: 100%|██████████| 570/570 [00:00<00:00, 189kB/s]\n",
-      "storing https://huggingface.co/bert-base-uncased/resolve/main/config.json in cache at /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
-      "creating metadata file for /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
-      "loading configuration file https://huggingface.co/bert-base-uncased/resolve/main/config.json from cache at /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
+      "loading configuration file https://huggingface.co/bert-base-uncased/resolve/main/config.json from cache at /home/miu/.cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
       "Model config BertConfig {\n",
       "  \"_name_or_path\": \"bert-base-uncased\",\n",
       "  \"architectures\": [\n",
@@ -226,11 +222,7 @@
       "  \"vocab_size\": 30522\n",
       "}\n",
       "\n",
-      "https://huggingface.co/bert-base-uncased/resolve/main/tokenizer_config.json not found in cache or force_download set to True, downloading to /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/tmpowcxww6d\n",
-      "Downloading: 100%|██████████| 28.0/28.0 [00:00<00:00, 39.4kB/s]\n",
-      "storing https://huggingface.co/bert-base-uncased/resolve/main/tokenizer_config.json in cache at /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/c1d7f0a763fb63861cc08553866f1fc3e5a6f4f07621be277452d26d71303b7e.20430bd8e10ef77a7d2977accefe796051e01bc2fc4aa146bc862997a1a15e79\n",
-      "creating metadata file for /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/c1d7f0a763fb63861cc08553866f1fc3e5a6f4f07621be277452d26d71303b7e.20430bd8e10ef77a7d2977accefe796051e01bc2fc4aa146bc862997a1a15e79\n",
-      "loading configuration file https://huggingface.co/bert-base-uncased/resolve/main/config.json from cache at /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
+      "loading configuration file https://huggingface.co/bert-base-uncased/resolve/main/config.json from cache at /home/miu/.cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
       "Model config BertConfig {\n",
       "  \"_name_or_path\": \"bert-base-uncased\",\n",
       "  \"architectures\": [\n",
@@ -257,20 +249,12 @@
       "  \"vocab_size\": 30522\n",
       "}\n",
       "\n",
-      "https://huggingface.co/bert-base-uncased/resolve/main/vocab.txt not found in cache or force_download set to True, downloading to /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/tmp45bt9b_7\n",
-      "Downloading: 100%|██████████| 226k/226k [00:00<00:00, 703kB/s] \n",
-      "storing https://huggingface.co/bert-base-uncased/resolve/main/vocab.txt in cache at /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/45c3f7a79a80e1cf0a489e5c62b43f173c15db47864303a55d623bb3c96f72a5.d789d64ebfe299b0e416afc4a169632f903f693095b4629a7ea271d5a0cf2c99\n",
-      "creating metadata file for /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/45c3f7a79a80e1cf0a489e5c62b43f173c15db47864303a55d623bb3c96f72a5.d789d64ebfe299b0e416afc4a169632f903f693095b4629a7ea271d5a0cf2c99\n",
-      "https://huggingface.co/bert-base-uncased/resolve/main/tokenizer.json not found in cache or force_download set to True, downloading to /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/tmpv3qsrvr1\n",
-      "Downloading: 100%|██████████| 455k/455k [00:00<00:00, 997kB/s] \n",
-      "storing https://huggingface.co/bert-base-uncased/resolve/main/tokenizer.json in cache at /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/534479488c54aeaf9c3406f647aa2ec13648c06771ffe269edabebd4c412da1d.7f2721073f19841be16f41b0a70b600ca6b880c8f3df6f3535cbc704371bdfa4\n",
-      "creating metadata file for /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/534479488c54aeaf9c3406f647aa2ec13648c06771ffe269edabebd4c412da1d.7f2721073f19841be16f41b0a70b600ca6b880c8f3df6f3535cbc704371bdfa4\n",
-      "loading file https://huggingface.co/bert-base-uncased/resolve/main/vocab.txt from cache at /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/45c3f7a79a80e1cf0a489e5c62b43f173c15db47864303a55d623bb3c96f72a5.d789d64ebfe299b0e416afc4a169632f903f693095b4629a7ea271d5a0cf2c99\n",
-      "loading file https://huggingface.co/bert-base-uncased/resolve/main/tokenizer.json from cache at /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/534479488c54aeaf9c3406f647aa2ec13648c06771ffe269edabebd4c412da1d.7f2721073f19841be16f41b0a70b600ca6b880c8f3df6f3535cbc704371bdfa4\n",
+      "loading file https://huggingface.co/bert-base-uncased/resolve/main/vocab.txt from cache at /home/miu/.cache/huggingface/transformers/45c3f7a79a80e1cf0a489e5c62b43f173c15db47864303a55d623bb3c96f72a5.d789d64ebfe299b0e416afc4a169632f903f693095b4629a7ea271d5a0cf2c99\n",
+      "loading file https://huggingface.co/bert-base-uncased/resolve/main/tokenizer.json from cache at /home/miu/.cache/huggingface/transformers/534479488c54aeaf9c3406f647aa2ec13648c06771ffe269edabebd4c412da1d.7f2721073f19841be16f41b0a70b600ca6b880c8f3df6f3535cbc704371bdfa4\n",
       "loading file https://huggingface.co/bert-base-uncased/resolve/main/added_tokens.json from cache at None\n",
       "loading file https://huggingface.co/bert-base-uncased/resolve/main/special_tokens_map.json from cache at None\n",
-      "loading file https://huggingface.co/bert-base-uncased/resolve/main/tokenizer_config.json from cache at /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/c1d7f0a763fb63861cc08553866f1fc3e5a6f4f07621be277452d26d71303b7e.20430bd8e10ef77a7d2977accefe796051e01bc2fc4aa146bc862997a1a15e79\n",
-      "loading configuration file https://huggingface.co/bert-base-uncased/resolve/main/config.json from cache at /home/miu/.var/app/com.visualstudio.code/cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
+      "loading file https://huggingface.co/bert-base-uncased/resolve/main/tokenizer_config.json from cache at /home/miu/.cache/huggingface/transformers/c1d7f0a763fb63861cc08553866f1fc3e5a6f4f07621be277452d26d71303b7e.20430bd8e10ef77a7d2977accefe796051e01bc2fc4aa146bc862997a1a15e79\n",
+      "loading configuration file https://huggingface.co/bert-base-uncased/resolve/main/config.json from cache at /home/miu/.cache/huggingface/transformers/3c61d016573b14f7f008c02c4e51a366c67ab274726fe2910691e2a761acf43e.37395cee442ab11005bcd270f3c34464dc1704b715b5d7d52b1a461abe3b9e4e\n",
       "Model config BertConfig {\n",
       "  \"_name_or_path\": \"bert-base-uncased\",\n",
       "  \"architectures\": [\n",
